[gd_scene load_steps=5 format=3 uid="uid://71fs737wnngw"]

[ext_resource type="Script" uid="uid://c727vhhwpha0b" path="res://ui/touch_controls/shell_select/shell_list_item/shell_list_item.gd" id="1_rrvgu"]
[ext_resource type="Texture2D" uid="uid://bf5hrwaqvtn25" path="res://entities/shell/base_shell_type/rounds.png" id="3_i1bbt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hdfl3"]
atlas = ExtResource("3_i1bbt")
region = Rect2(80, 16, 32, 32)

[sub_resource type="CanvasTexture" id="CanvasTexture_i1bbt"]

[node name="ShellListItem" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_rrvgu")

[node name="ShellButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("AtlasTexture_hdfl3")
icon_alignment = 1

[node name="ShellLoadProgressBar" type="TextureProgressBar" parent="ShellButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 1
nine_patch_stretch = true
texture_progress = SubResource("CanvasTexture_i1bbt")
tint_progress = Color(0, 0, 0, 0.368627)

[node name="StatsContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="StatsLabel" type="Label" parent="StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HE"
